# KYC_admin

./: .dockerignore  .env.docker  Dockerfile  README.md  pyproject.toml
api/: models.py
api/management/commands/: ccsu.py
base/: servises.py
base/management/commands/: ccsu.py  migrateapi.py  setpswd.py
config/: settings.py
files/: admin.py  models.py  servises.py
users/: admin.py  models.py
users/management/commands/: ccsu.py
