[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["u_alex90 <u_alex90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.2"
django-rename-app = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
